# CalculiX

./: .gitignore  pixi.toml
cmake/: CMakeLists.txt  CMakePresets.json  activate_intel.cmake
src/: CalculiX.h  biosav.c  compare.c  compfluidfem.c
